postgresql-8.2 (8.2.4-3) UNRELEASED; urgency=low

  * debian/postgresql-8.2.postinst: Work around dpkg bug #435938 by manually
    doing the timezone symlink transition. Closes: #430524

 -- Martin Pitt <mpitt@debian.org>  Sat, 04 Aug 2007 13:34:06 +0200

postgresql-8.2 (8.2.4-2) unstable; urgency=low

  * debian/control: Remove some unnecessary build depends. Closes: #424010
  * debian/postgresql-8.2.install: Actually install the "timezone" symlink,
    not the dereferenced files.
  * Add debian/patches/12-m32r-tas.patch:
    - Support m32r architecture, thanks to Kazuhiro Inaoka for the initial
      patch.
    - Backported from CVS head:
      http://archives.postgresql.org/pgsql-committers/2007-05/msg00065.php
    - Closes: #419267
  * Add debian/patches/00upstream-01-polymorphic-functions.patch:
    - Fix breakage of polymorphic SQL functions (regression in 8.2.4), add
      test cases.
    - Patch taken from upstream CVS:
      http://archives.postgresql.org/pgsql-committers/2007-05/msg00010.php
    - Closes: #430347
  * debian/control: Fix libpq-dev Depends: line: ${Source-Version} ->
    ${binary:Version}.

 -- Martin Pitt <mpitt@debian.org>  Sat, 23 Jun 2007 19:08:25 +0200

postgresql-8.2 (8.2.4-1) unstable; urgency=medium

  * New upstream security/bug fix release:
    - Support explicit placement of the temporary-table schema within
      search_path, and disable searching it for functions and operators.
      This is needed to allow a security-definer function to set a truly
      secure value of search_path. Without it, an unprivileged SQL user
      can use temporary objects to execute code with the privileges of
      the security-definer function (CVE-2007-2138). See "CREATE
      FUNCTION" for more information.
    - Fix to_char() so it properly upper/lower cases localized day or
      month names.
    - "/contrib/tsearch2" crash fixes.
    - Require "COMMIT PREPARED" to be executed in the same database as
      the transaction was prepared in.