@@ -59,17 +59,15 @@ install/postgresql-doc-8.2::
 	install build-tree/$(DEB_TAR_SRCDIR)/src/tutorial/*.c build-tree/$(DEB_TAR_SRCDIR)/src/tutorial/*.source build-tree/$(DEB_TAR_SRCDIR)/src/tutorial/Makefile build-tree/$(DEB_TAR_SRCDIR)/src/tutorial/README debian/$(cdbs_curpkg)/usr/share/doc/$(cdbs_curpkg)/tutorial
 
 binary-predeb/postgresql-8.2::
+ifeq (, $(findstring nocheck, $(DEB_BUILD_OPTIONS)))
 	# patch away the "don't execute as root" check for the test
 	# suite; doing it here will ensure that the actual debs have
 	# the check.
-	cd build-tree/$(DEB_TAR_SRCDIR) && \
-	patch -p1 < ../../debian/disable-root-check.patch && \
-	make 
-	
-	# run testsuite
-ifeq (, $(findstring nocheck, $(DEB_BUILD_OPTIONS)))
-	cd build-tree/$(DEB_TAR_SRCDIR); \
-	if ! make check; then \
+	set -e; cd build-tree/$(DEB_TAR_SRCDIR); \
+	patch --no-backup-if-mismatch -p1 < ../../debian/disable-root-check.patch; \
+	make check || fail=1; \
+	patch --no-backup-if-mismatch -Rp1 < ../../debian/disable-root-check.patch; \
+	if [ -n "$$fail" ]; then \
 	    for l in regression.diffs log/initdb.log log/postmaster.log; do \
 	    	if [ -e src/test/regress/$$l ]; then \
 		    echo "********* $$l *******"; \
@@ -79,9 +77,6 @@ ifeq (, $(findstring nocheck, $(DEB_BUILD_OPTIONS)))
 	    $(TESTSUITE_FAIL_CMD); \
 	fi
 endif
-
-	cd build-tree/$(DEB_TAR_SRCDIR) && \
-	patch -Rp1 < ../../debian/disable-root-check.patch 
 
 	# compress manpages
 	find debian/postgresql-8.2/usr/share/postgresql/8.2/man -type f -exec gzip -9 '{}' \;
