@@ -2,8 +2,10 @@ postgresql-8.2 (8.2.4-3) UNRELEASED; urgency=low
 
   * debian/postgresql-8.2.postinst: Work around dpkg bug #435938 by manually
     doing the timezone symlink transition. Closes: #430524
+  * debian/rules: Make binary-arch idempotent if test suite fails.
+    Closes: #431565
 
- -- Martin Pitt <mpitt@debian.org>  Sat, 04 Aug 2007 13:34:06 +0200
+ -- Martin Pitt <mpitt@debian.org>  Sat, 04 Aug 2007 14:07:00 +0200
 
 postgresql-8.2 (8.2.4-2) unstable; urgency=low
 
